--- a/quotes/house-painting.html
+++ b/quotes/house-painting.html
@@ -116,9 +116,9 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <h1>Exterior House Painting Quote Calculator</h1>
 
-<p>Our exterior house painting quote calculator has been created to give homeowners a fast, clear realistic ball park idea of cost before committing to any work. If you live in Askern DN6 or within a six mile radius, this tool allows you to estimate the price of a complete exterior house paint without waiting for a site visit.</p>
+<p>Our exterior house painting quote calculator has been created to give homeowners a fast, clear idea of cost before committing to any work. If you live in Askern DN6 or within a six mile radius, this tool allows you to estimate the price of a complete exterior house paint without waiting for a site visit.</p>
 
-<p>Many customers want to understand potential costs upfront without pushy call outs. This calculator helps remove uncertainty by considering key factors such as property size, number of exterior walls, surface condition, and access requirements. It provides a realistic guide price so you can plan your budget with confidence.</p>
+<p>Many customers want to understand potential costs upfront. This calculator helps remove uncertainty by considering key factors such as property size, number of exterior walls, surface condition, and access requirements. It provides a realistic guide price so you can plan your budget with confidence.</p>
 
 <p>The calculator is designed to save time for both you and us. Instead of guessing or searching online for vague price ranges, you receive a tailored estimate based on real exterior painting scenarios. This makes it easier to decide whether to move forward with a full quotation and inspection.</p>
 
