--- a/quotes/house-painting.html
+++ b/quotes/house-painting.html
@@ -15,6 +15,7 @@
 <link rel="preload" as="image" href="/images/logo.webp" />
 
 <style>
+/* HEADER */
 header{
 text-align:center;
 padding:25px 10px;
@@ -36,6 +37,7 @@ border:2px solid #000;
 }
 .call-btn:hover{background:#333;}
 
+/* MAIN */
 main{
 max-width:950px;
 margin:40px auto;
@@ -72,7 +74,16 @@ border-radius:6px;
 font-size:18px;
 font-weight:bold;
 }
+.cta{
+margin-top:15px;
+text-align:center;
+}
+.cta .call-btn{
+font-size:20px;
+padding:14px 30px;
+}
 
+/* FOOTER */
 .site-footer{
 background:#000;
 color:#fff;
@@ -163,6 +174,11 @@ text-decoration:none;
 Enter measurements to calculate your quote.
 </div>
 
+<div id="cta" class="cta" style="display:none;">
+<p>If this sounds like a realistic price for you, give us a ring!</p>
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+</div>
+
 <p><small>This calculator provides a guide price only. Final pricing may vary following an on-site inspection.</small></p>
 
 </main>
@@ -208,6 +224,9 @@ total = Math.max(total,0);
 
 document.getElementById('result').innerHTML =
 `Estimated Exterior Painting Cost:<br>£${total.toFixed(2)}`;
+
+// Show call-to-action button
+document.getElementById('cta').style.display = 'block';
 }
 </script>
 
