--- a/quotes/house-painting.html
+++ b/quotes/house-painting.html
@@ -196,6 +196,10 @@ Enter measurements to calculate your quote.
 <div id="cta" class="cta" style="display:none;">
 <p>If this sounds like a realistic price for you, give us a ring!</p>
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+
+<!-- New colour range section -->
+<p style="margin-top:15px;">Write your price down and explore our standard colour range:</p>
+<a href="https://homerepairs4u.com/quotes/colour-range.html" class="call-btn">Visit Colour Range</a>
 </div>
 
 <p><small>This calculator provides a guide price only. Final pricing may vary following an on-site inspection.</small></p>
